fix price spacing

--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -13,9 +13,8 @@
 }
 
 .price {
-    margin-left: 10px;
+    margin: 0px 10px;
     width: fit-content;
-    padding: 5px;
     border-radius: 10px;
 }
 
